// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TextEditor ui with formats: Component: textEditor => ui => with formats 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Quill
    className=""
    formats={
      Array [
        "italic",
      ]
    }
    modules={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    placeholder="Please enter your first name"
    theme="snow"
    value="Maarten"
  />
  Some error
</FormGroup>
`;

exports[`Component: TextEditor ui with modules: Component: textEditor => ui => with modules 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Quill
    className=""
    formats={
      Array [
        "bold",
      ]
    }
    modules={
      Object {
        "toolbar": Array [
          "bold",
        ],
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    placeholder="Please enter your first name"
    theme="snow"
    value="Maarten"
  />
  Some error
</FormGroup>
`;

exports[`Component: TextEditor ui with value: Component: textEditor => ui => with value 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="firstName"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    First name
  </Label>
  <Quill
    className=""
    formats={
      Array [
        "header",
        "list",
        "bold",
        "italic",
        "underline",
        "link",
      ]
    }
    id="firstName"
    modules={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    placeholder="Please enter your first name"
    theme="snow"
    value="Maarten"
  />
  Some error
</FormGroup>
`;

exports[`Component: TextEditor ui without label: Component: textEditor => ui => without label 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Quill
    className=""
    formats={
      Array [
        "header",
        "list",
        "bold",
        "italic",
        "underline",
        "link",
      ]
    }
    modules={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    placeholder="Please enter your first name"
    theme="snow"
    value="Maarten"
  />
  Some error
</FormGroup>
`;

exports[`Component: TextEditor ui without placeholder: Component: textEditor => ui => without placeholder 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="firstName"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    First name
  </Label>
  <Quill
    className=""
    formats={
      Array [
        "header",
        "list",
        "bold",
        "italic",
        "underline",
        "link",
      ]
    }
    id="firstName"
    modules={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    theme="snow"
    value="Maarten"
  />
  Some error
</FormGroup>
`;
